statum-macros/tests/ui/invalid_legacy_machine_builder.stderr
error[E0599]: no method named `machine_builder` found for struct `Row` in the current scope
  --> tests/ui/invalid_legacy_machine_builder.rs:54:17
   |
27 | struct Row {
   | ---------- method `machine_builder` not found for this struct
...
54 |     let _ = row.machine_builder().name("todo".to_string()).build();
   |                 ^^^^^^^^^^^^^^^ method not found in `Row`
